# chatgpt-visible-bridge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
chatgpt_visible_bridge/: __init__.py  adapter.py  cli.py  schema.py  worker.py  workspace.py
chatgpt_visible_bridge/adapters/: __init__.py  base.py  codex_chatgpt_control.py  mock.py  registry.py
chatgpt_visible_bridge/telegram/: __init__.py  formatter.py  handler.py  parser.py  router.py
docs/: ARCHITECTURE.md  CGW2_TELEGRAM_ROUTER.md  CGW3A_LIVE_ADAPTER_SKELETON.md  CGW3B_LIVE_SMOKE.md  HERMES_INTEGRATION.md  OPEN_SOURCE_RELEASE.md  PHASE_CGW1_MVP_REPORT.md  PHASE_CGW2_TELEGRAM_ROUTER_REPORT.md  PHASE_CGW3A_LIVE_ADAPTER_SKELETON_REPORT.md  PHASE_CGW3B_LIVE_SMOKE_REPORT.md  PHASE_CGW3C_LIVE_ENV_PREFLIGHT_REPORT.md  PHASE_CGW4A_OPEN_SOURCE_RELEASE_REPORT.md  PHASE_CGW4B_RELEASE_ROADMAP_REPORT.md  PHASE_LOG.md  RELEASE_NOTES_v0.1.0-alpha.md  RELEASE_NOTES_v0.1.0.md  SECURITY_BOUNDARY.md  TASK_CONTRACT.md  TELEGRAM_WORKFLOW.md  WORKER_MODES.md
examples/: adapter-commands.md  hermes-router-example.py  result.example.json  task.example.json  telegram-commands.md
tests/: test_adapters.py  test_cgw3a_blocked.py  test_cgw3b_live_adapter.py  test_cli.py  test_schema.py  test_telegram_handler.py  test_telegram_parser.py  test_worker.py  test_workspace.py
